tests/invalid/test1.var
x = 10;

// Why invalid : Variable used without declaration